--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-hover-card": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
@@ -40,6 +41,7 @@
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.4.1",
     "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-table": "^8.19.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,6 +49,7 @@
     "embla-carousel-react": "^8.1.6",
     "ethers": "^6.13.1",
     "input-otp": "^1.2.4",
+    "json-as-xlsx": "^2.5.6",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -63,6 +66,7 @@
     "vaul": "^0.9.1",
     "viem": "^2.17.3",
     "wagmi": "^2.10.10",
+    "web3": "^4.11.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
