--- a/package.json
+++ b/package.json
@@ -40,16 +40,19 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.4.1",
-    "@tanstack/react-query": "^5.51.1",
+    "@tanstack/react-query": "^5.50.1",
     "@tanstack/react-table": "^8.19.2",
+    "alchemy-sdk": "^2.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.6",
-    "ethers": "^6.13.1",
+    "ethers": "^5.7",
     "input-otp": "^1.2.4",
+    "jotai": "^2.9.0",
     "json-as-xlsx": "^2.5.6",
+    "lokijs": "^1.5.12",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
@@ -58,14 +61,15 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-resizable-panels": "^2.0.20",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "siwe": "^2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "viem": "^2.17.3",
-    "wagmi": "^2.10.10",
+    "viem": "2.x",
+    "wagmi": "^2.10.9",
     "web3": "^4.11.0",
     "zod": "^3.23.8"
   },
@@ -78,5 +82,8 @@
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
-  }
+  },
+  "trustedDependencies": [
+    "es5-ext"
+  ]
 }
